--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: academiaconnect
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: cd ucu_chapters && gunicorn ucu_chapters.wsgi:application
+    startCommand: gunicorn --chdir ucu_chapters ucu_chapters.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: ucu_chapters.settings.production
