--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,11 @@ services:
     name: academiaconnect
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --chdir ucu_chapters ucu_chapters.wsgi:application
+    startCommand: gunicorn ucu_chapters.wsgi:application --log-file -
     envVars:
       - key: DJANGO_SETTINGS_MODULE
-        value: ucu_chapters.settings.production
+        value: ucu_chapters.settings
       - key: SECRET_KEY
         generateValue: true
-    python_version: 3.10.0
+      - key: PYTHON_VERSION
+        value: 3.10.0
