--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,11 @@ services:
     name: academiaconnect
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --chdir ucu_chapters ucu_chapters.wsgi:application --log-file -
+    startCommand: gunicorn ucu_chapters.wsgi:application --bind 0.0.0.0:$PORT
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: ucu_chapters.settings
       - key: SECRET_KEY
         generateValue: true
-      - key: PYTHON_VERSION
-        value: 3.10.0
+      - key: PORT
+        value: 8000
