Update build and start commands for Render

--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,10 @@ services:
   - type: web
     name: academiaconnect
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: cd ucu_chapters && gunicorn wsgi:application
+    buildCommand: |
+      pip install -r requirements.txt
+      python manage.py collectstatic --noinput
+    startCommand: cd ucu_chapters && gunicorn wsgi:application --bind 0.0.0.0:$PORT
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: ucu_chapters.settings.production
